# AoC-2024

./: .gitignore  AoC-2024.kdev4  CMakeLists.txt
src/: CMakeLists.txt  aoc-2024.cpp  aoc-2024.h  aoc-2024.json  build.sh  build2.sh  day1-1.cpp  day1-2.cpp  day2-1.cpp  day2-2.cpp
